--- a/src/materials/buttons/button-default.html
+++ b/src/materials/buttons/button-default.html
@@ -1,3 +1,7 @@
+---
+notes: |
+  These are notes associated with this `button` component.
+---
 <div class="btn-container">
   <button class="btn">button.btn</button>
   <a class="btn" href="javascript:void(0)">a.btn</a>
@@ -14,6 +18,7 @@
   <label class="btn {{@key}}">label.{{@key}}</label>
   <input type="submit" class="btn {{@key}}" value="input.{{@key}}" />
 </div>
+<br>
 
   {{#each this}}
     <div class="btn-container">
@@ -22,5 +27,6 @@
       <label class="btn {{@key}} {{this}}">label.{{@key}}.{{this}}</label>
       <input type="submit" class="btn {{@key}} {{this}}" value="input.{{@key}}.{{this}}" />
     </div>
+    <br>
   {{/each}}
 {{/each}}
