--- a/src/materials/forms/textarea.html
+++ b/src/materials/forms/textarea.html
@@ -1,1 +1,12 @@
-<textarea name="" id="" cols="30" rows="10"></textarea>
+<form action="./" name="modifiersForm">
+	<div class="field">
+    <label for="">label</label>
+    <textarea id="" name="" cols="30" rows="10">
+      value text
+    </textarea>
+	</div>
+  <div class="field">
+    <label for="">label</label>
+    <textarea id="" name="" cols="30" rows="10" placeholder="placeholder text"></textarea>
+	</div>
+</form>
