use plural form partials

--- a/src/materials/forms/textareas.html
+++ b/src/materials/forms/textareas.html
@@ -1,9 +1,7 @@
 <form action="./" name="modifiersForm">
 	<div class="field">
     <label for="">label</label>
-    <textarea id="" name="" cols="30" rows="10">
-      value text
-    </textarea>
+    <textarea id="" name="" cols="30" rows="10">value text</textarea>
 	</div>
   <div class="field">
     <label for="">label</label>
