--- a/src/materials/progress/full.html
+++ b/src/materials/progress/full.html
@@ -1,4 +1,4 @@
-<button class="js-add-class" data-class="is-loading">start loader</button>
+<button data-trigger="5000" data-target-class="is-loading" data-target="body">start loader</button>
 
 <div class="loader_-full">
   <div class="loader_-full__content">
