improve timer class name

--- a/src/materials/progress/full.html
+++ b/src/materials/progress/full.html
@@ -1,4 +1,4 @@
-<button data-trigger="5000" data-target-class="is-loading" data-target="body">start loader</button>
+<button data-timed-class="is-loading" data-timeout="5000" data-target="body">start loader</button>
 
 <div class="loader_-full">
   <div class="loader_-full__content">
