fix font color names not being output correctly

--- a/src/materials/typographic-modifiers/font-colors.html
+++ b/src/materials/typographic-modifiers/font-colors.html
@@ -2,7 +2,7 @@
   <h3 class="fc_-{{@key}}">.fc_-{{@key}}</h3>
 
   {{#each this}}
-    <p class="fc_-{{@key}}-{{this}}">.fc_-{{@key}}-{{this}}</p>
+    <p class="fc_-{{@../key}}-{{this}}">.fc_-{{@../key}}-{{this}}</p>
 
   {{/each}}
 {{/each}}
