--- a/src/materials/menus/menu-primary.html
+++ b/src/materials/menus/menu-primary.html
@@ -1,4 +1,4 @@
-<a class="js-menu-toggle menu-toggle" href="javscript:void(0)" data-target=".menu_-primary-container"></a>
+<a class="js-menu-toggle menu-toggle" href="javscript:void(0)" data-target="body">menu toggle</a>
 <nav class=" menu_-primary-container">
 	<ul class="menu_-primary menu">
 		<li class="menu__item menu__item_-current"><a href="javascript:void(0);">home</a></li>
