--- a/src/materials/typography/lists.html
+++ b/src/materials/typography/lists.html
@@ -1,4 +1,4 @@
-{{#each typography.lists}}
+{{#each typography.lists.tags}}
 <{{this}}>
   <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
   <li>Aliquam tincidunt mauris eu risus.</li>
