show all variants of typeface

--- a/src/materials/typographic-modifiers/font-families.html
+++ b/src/materials/typographic-modifiers/font-families.html
@@ -1,4 +1,13 @@
 {{#each typographic-modifiers.families}}
-  <p class="ff_-{{this}}">.ff_-{{this}}</p>
+  <p class="ff_-{{this}} fs_-gamma">
+    .ff_-{{this}}
+  </p>
+
+  <p class="ff_-{{this}}">
+    .ff_-{{this}} regular<br>
+    <em>.ff_-{{this}} italic</em><br>
+    <strong>.ff_-{{this}} bold</strong><br>
+    <strong><em>.ff_-{{this}} bold italic</em></strong>
+  </p>
 {{/each}}
 
