use traditional BEM modifiers

--- a/src/materials/animations/animator.html
+++ b/src/materials/animations/animator.html
@@ -18,7 +18,7 @@
 <h3>ngShow Animations</h3>
 <div class="gw" ng-init="ngShow.elem = true">
 	<div class="g one-half">
-		<p class="alert_-info" ng-class="ngShow.animClass" ng-show="ngShow.elem && !ngShow.useInline">
+		<p class="alert--info" ng-class="ngShow.animClass" ng-show="ngShow.elem && !ngShow.useInline">
 			Consectetur laudantium iusto in voluptatem quae dolores. A omnis soluta iste
 			quasi quia perspiciatis veritatis, quisquam, ipsa voluptatibus eum dolorem
 			voluptatibus assumenda? Et explicabo laudantium soluta voluptatibus
@@ -46,7 +46,7 @@
 <h3>ngIf Animations</h3>
 <div class="gw" ng-init="ngIf.elem = true">
 	<div class="g one-half">
-		<p class="alert_-info" ng-class="ngIf.animClass" ng-if="ngIf.elem && !ngIf.useInline">
+		<p class="alert--info" ng-class="ngIf.animClass" ng-if="ngIf.elem && !ngIf.useInline">
 			Consectetur laudantium iusto in voluptatem quae dolores. A omnis soluta iste
 			quasi quia perspiciatis veritatis, quisquam, ipsa voluptatibus eum dolorem
 			voluptatibus assumenda? Et explicabo laudantium soluta voluptatibus
