--- a/src/materials/progress/full.html
+++ b/src/materials/progress/full.html
@@ -1,8 +1,8 @@
 <button data-timed-class="is-loading" data-timeout="5000" data-target="body">start loader</button>
 
-<div class="loader_-full">
-  <div class="loader_-full__content">
-    <div class="loader_-full__content__inner">
+<div class="loader--full">
+  <div class="loader--full__content">
+    <div class="loader--full__content__inner">
       <i class="loader__icon"></i>
       <i class="loader__text">loading...</i>
     </div>
