--- a/src/materials/progress/inline.html
+++ b/src/materials/progress/inline.html
@@ -1,1 +1,1 @@
-<i class="loader_-inline"><i class="visuallyhidden">loading...</i></i>
+<i class="loader--inline"><i class="visuallyhidden">loading...</i></i>
