--- a/src/materials/forms/radios-custom.html
+++ b/src/materials/forms/radios-custom.html
@@ -1,9 +1,9 @@
 <div class="field">
 	<input class="visuallyhidden" type="radio" id="radio5" name="radios" checked="">
-	<label for="radio5"><i class="radio_-icon visuallyhidden-ie8"></i> custom radio</label>
+	<label for="radio5"><i class="radio--icon visuallyhidden-ie8"></i> custom radio</label>
 
 	<br>
 
 	<input class="visuallyhidden" type="radio" id="radio6" name="radios">
-	<label for="radio6"><i class="radio_-icon visuallyhidden-ie8"></i> custom radio</label>
+	<label for="radio6"><i class="radio--icon visuallyhidden-ie8"></i> custom radio</label>
 </div>
