--- a/src/materials/menus/menu-primary.html
+++ b/src/materials/menus/menu-primary.html
@@ -1,7 +1,7 @@
 <a class="js-menu-toggle menu-toggle" href="javscript:void(0)" data-target="body">menu toggle</a>
-<nav class=" menu_-primary-container">
-	<ul class="menu_-primary menu">
-		<li class="menu__item menu__item_-current"><a href="javascript:void(0);">home</a></li>
+<nav class=" menu--primary-container">
+	<ul class="menu--primary menu">
+		<li class="menu__item menu__item--current"><a href="javascript:void(0);">home</a></li>
 		<li class="menu__item">
 		<a href="javascript:void(0);">item 1</a>
 		<ul class="menu menu__sub">
