--- a/src/materials/typographic-modifiers/font-colors.html
+++ b/src/materials/typographic-modifiers/font-colors.html
@@ -1,8 +1,8 @@
 {{#each typographic-modifiers.colors}}
-  <h3 class="fc_-{{@key}}">.fc_-{{@key}}</h3>
+  <h3 class="fc--{{@key}}">.fc--{{@key}}</h3>
 
   {{#each this}}
-    <p class="fc_-{{@../key}}-{{this}}">.fc_-{{@../key}}-{{this}}</p>
+    <p class="fc--{{@../key}}-{{this}}">.fc--{{@../key}}-{{this}}</p>
 
   {{/each}}
 {{/each}}
