--- a/src/materials/typographic-modifiers/font-families.html
+++ b/src/materials/typographic-modifiers/font-families.html
@@ -1,13 +1,13 @@
 {{#each typographic-modifiers.families}}
-  <p class="ff_-{{this}} fs_-gamma">
-    .ff_-{{this}}
+  <p class="ff--{{this}} fs--gamma">
+    .ff--{{this}}
   </p>
 
-  <p class="ff_-{{this}}">
-    .ff_-{{this}} regular<br>
-    <em>.ff_-{{this}} italic</em><br>
-    <strong>.ff_-{{this}} bold</strong><br>
-    <strong><em>.ff_-{{this}} bold italic</em></strong>
+  <p class="ff--{{this}}">
+    .ff--{{this}} regular<br>
+    <em>.ff--{{this}} italic</em><br>
+    <strong>.ff--{{this}} bold</strong><br>
+    <strong><em>.ff--{{this}} bold italic</em></strong>
   </p>
 {{/each}}
 
