--- a/src/materials/typographic-modifiers/font-sizes.html
+++ b/src/materials/typographic-modifiers/font-sizes.html
@@ -1,3 +1,3 @@
 {{#each typographic-modifiers.sizes}}
-  <p class="fs_-{{this}}" data-computed-value="font-size">.fs_-{{this}}</p>
+  <p class="fs--{{this}}" data-computed-value="font-size">.fs--{{this}}</p>
 {{/each}}
