use a button instead of a link

--- a/src/materials/menus/menu-primary.html
+++ b/src/materials/menus/menu-primary.html
@@ -1,4 +1,4 @@
-<a class="js-menu-toggle menu-toggle" href="javscript:void(0)" data-target="body">menu toggle</a>
+<button class="js-menu-toggle menu-toggle" data-target="body">menu toggle</button>
 <nav class=" menu--primary-container">
 	<ul class="menu--primary menu">
 		<li class="menu__item menu__item--current"><a href="javascript:void(0);">home</a></li>
