--- a/src/materials/buttons/button-default.html
+++ b/src/materials/buttons/button-default.html
@@ -10,6 +10,7 @@ notes: |
   <a class="btn {{@key}}" href="javascript:void(0)">a.{{@key}}</a>
   <label class="btn {{@key}}">label.{{@key}}</label>
   <input type="submit" class="btn {{@key}}" value="input.{{@key}}" />
+  <button class="btn {{@key}}" disabled>button.{{@key}}[disabled]</button>
 </div>
 <br>
 
@@ -21,6 +22,7 @@ notes: |
       <a class="btn {{@../key}} {{this}}" href="javascript:void(0)">a.{{@../key}}.{{this}}</a>
       <label class="btn {{@../key}} {{this}}">label.{{@../key}}.{{this}}</label>
       <input type="submit" class="btn {{@../key}} {{this}}" value="input.{{@../key}}.{{this}}" />
+      <button class="btn {{@../key}} {{this}}" disabled>button.{{@../key}}.{{this}}[disabled]</button>
     </div>
     <br>
   {{/each}}
