use inline svg custom checks and radios

--- a/src/materials/forms/checkboxes-custom.html
+++ b/src/materials/forms/checkboxes-custom.html
@@ -1,8 +1,48 @@
 <div class="field">
 	<input class="visuallyhidden" type="checkbox" id="checkbox5" checked="">
-	<label for="checkbox5"><i class="checkbox--icon visuallyhidden-ie8"></i> custom checkbox</label>
+
+	<label for="checkbox5">
+    <i class="custom-check-radio">
+      <i class="custom-check-radio__icon--false">
+        <i class="custom-check-radio__icon__inner">
+          <svg>
+            <use xlink:href="#icon-checkbox-false" />
+          </svg>
+        </i>
+      </i>
+
+      <i class="custom-check-radio__icon--true">
+        <i class="custom-check-radio__icon__inner">
+          <svg>
+            <use xlink:href="#icon-checkbox-true" />
+          </svg>
+        </i>
+      </i>
+    </i>
+    custom checkbox
+  </label>
 	<br>
 
 	<input class="visuallyhidden" type="checkbox" id="checkbox6">
-	<label for="checkbox6"><i class="checkbox--icon visuallyhidden-ie8"></i> custom checkbox</label>
+
+  <label for="checkbox6">
+    <i class="custom-check-radio">
+      <i class="custom-check-radio__icon--false">
+        <i class="custom-check-radio__icon__inner">
+          <svg>
+            <use xlink:href="#icon-checkbox-false" />
+          </svg>
+        </i>
+      </i>
+
+      <i class="custom-check-radio__icon--true">
+        <i class="custom-check-radio__icon__inner">
+          <svg>
+            <use xlink:href="#icon-checkbox-true" />
+          </svg>
+        </i>
+      </i>
+    </i>
+    custom checkbox
+  </label>
 </div>
