--- a/src/materials/forms/radios-custom.html
+++ b/src/materials/forms/radios-custom.html
@@ -1,9 +1,50 @@
 <div class="field">
 	<input class="visuallyhidden" type="radio" id="radio5" name="radios" checked="">
-	<label for="radio5"><i class="radio--icon visuallyhidden-ie8"></i> custom radio</label>
+
+  <label for="radio5">
+    <i class="custom-check-radio">
+      <i class="custom-check-radio__icon--false">
+        <i class="custom-check-radio__icon__inner">
+          <svg>
+            <use xlink:href="#icon-radio-false" />
+          </svg>
+        </i>
+      </i>
+
+      <i class="custom-check-radio__icon--true">
+        <i class="custom-check-radio__icon__inner">
+          <svg>
+            <use xlink:href="#icon-radio-true" />
+          </svg>
+        </i>
+      </i>
+    </i>
+    custom radio
+  </label>
 
 	<br>
 
 	<input class="visuallyhidden" type="radio" id="radio6" name="radios">
-	<label for="radio6"><i class="radio--icon visuallyhidden-ie8"></i> custom radio</label>
+
+  <label for="radio6">
+    <i class="custom-check-radio">
+      <i class="custom-check-radio__icon--false">
+        <i class="custom-check-radio__icon__inner">
+          <svg>
+            <use xlink:href="#icon-radio-false" />
+          </svg>
+        </i>
+      </i>
+
+      <i class="custom-check-radio__icon--true">
+        <i class="custom-check-radio__icon__inner">
+          <svg>
+            <use xlink:href="#icon-radio-true" />
+          </svg>
+        </i>
+      </i>
+    </i>
+    custom radio
+  </label>
 </div>
+
